fix code button alignment

--- a/src/scss/features/staff-walkthrough-improvements/edit-walkthrough.scss
+++ b/src/scss/features/staff-walkthrough-improvements/edit-walkthrough.scss
@@ -57,6 +57,14 @@ body {
           }
         }
 
+        .ta-x-staff-walkthrough-improvements-edit-walkthrough-page-source-code-button {
+          svg {
+            width: 32px;
+            margin-left: -10px;
+            margin-right: -4px;
+          }
+        }
+
         .ta-x-staff-walkthrough-improvements-edit-walkthrough-page-theme-toggle {
           svg {
             height: 20px;
